CSS updates for improved layout Bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body{
   background-color: white;
   color: black;
+  padding-top: 120px;
 }
 
 li {
@@ -25,7 +26,7 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 150px;
+  width: 200px;
   padding: 24px 20px;
   border-radius: 24px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -35,24 +36,29 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   flex: 1;
   background-color: rgb(226, 195, 147);
   border-radius: 15px;
   text-align: center;
   font-size: 1.5rem;
-  height: 40px;
+  font-weight: 600;
+  height: 50px;
   margin: 0;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1),
               0 6px 16px rgba(0,0,0,0.09);
 }
 
 .answer-space {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
   background-color: rgb(226, 195, 147);
   padding: 6px 16px;
   min-width: 60px;
   width: 80%;
-  height: 25px;
+  height: 35px;
   margin-bottom: 20px;
   border-radius: 15px;
   text-align: center;
@@ -89,9 +95,12 @@ button.newdrink {
 
 .button {
   background-color: rgba(138, 98, 12, 0.942);
-  font-weight: bold;
+  font-weight: 800;
+  font-size: 1rem;
   color: white;
   margin: 15px;
+  height: 50px;
+  width: auto;
 }
 
 .radio-buttons {
@@ -99,21 +108,48 @@ button.newdrink {
   padding: 0;
 }
 
-.title {
-  display: inline-block;
-  margin-bottom: 0;
+.title-container {
+  display: flex;
+  align-items: baseline;
+  gap: 8px;
+  margin-bottom: 4cqh;
 }
 
-.title-container {
+.title-icon {
+  width: 125px;
+  height: auto;
+}
+
+.title-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 1.1;
+  margin-bottom: 0;
+  margin-left: -110px;
+}
+
+.drink-title {
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.subtitle {
+  margin-top: 4px;
+  margin-bottom: 0;
   text-align: left;
-  margin-bottom: 50px;
+  margin-left: -110px;
 }
 
 .drink-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 600px;
+  width: 1000px;
   margin: 24px auto 0 auto;
   padding: 0 8px;
 }
@@ -123,5 +159,5 @@ button.newdrink {
   border-radius: 8px;
   border: none;
   cursor: pointer;
-  margin-top: 16px;
+  margin-top: 50px;
 }
